crates/libs/frieze/tests/ui/rename_field_collision.stderr
error: frieze: field `id` renames to "id" via the Rust identifier, which conflicts with field `user_id` (also renames to "id" via `#[serde(rename = "...")]`). Each field must have a unique wire name.
 --> tests/ui/rename_field_collision.rs:9:5
  |
9 |     id: i64,
  |     ^^

warning: unreachable pattern
 --> tests/ui/rename_field_collision.rs:9:5
  |
7 |     #[serde(rename = "id")]
  |                      ---- matches all the relevant values
8 |     user_id: i64,
9 |     id: i64,
  |     ^^ no value can reach this
  |
  = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default
